2006-11-01  Tim-Philipp Müller  <tim at centricular dot net>

	* HACKING:
	  Fix numbering; mention that data-get downloads a LOT of data.

2006-10-27  Michael Smith  <msmith@fluendo.com>

	* src/htdocs/releases/gstreamer/template.xml:
	  11 consecutive releases with the same spelling mistake. Does nobody
	  ever actually read the release notes?

2006-10-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add 0.10.11 milestones for core and -base.

2006-09-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins-base/0.10.10.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.10.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	* src/htdocs/releases/text.xsl:
	  release notes for 0.10.10

2006-09-08  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones for -good and -ugly.

2006-09-01  Michael Smith  <msmith@fluendo.com>

	* src/htdocs/releases/gst-ffmpeg/template.xml:
	* src/htdocs/releases/gst-plugins-bad/template.xml:
	* src/htdocs/releases/gst-plugins-base/template.xml:
	* src/htdocs/releases/gst-plugins-good/template.xml:
	* src/htdocs/releases/gst-plugins-ugly/template.xml:
	* src/htdocs/releases/gst-python/template.xml:
	* src/htdocs/releases/gstreamer/0.10.6.xml:
	* src/htdocs/releases/gstreamer/template.xml:
	* src/htdocs/releases/releases.xsl:
	* src/htdocs/releases/text.xsl:
	Patch from bug #341758: improve release XSL, better spelling.

2006-08-31  Tim-Philipp Müller  <tim at centricular dot net>

	* HACKING:
	  Fix wrong instructions.

	* TODO:
	  Fix typo.

	* src/htdocs/documentation/index.xml:
	  Only link to HEAD documentation and hide the 'stable' column
	  completely for now, since the docs in the 'stable' column are
	  ancient and don't seem to be ever updated, but at the same time
	  those are the docs most people seem to check out first. Not good.
