@@ -1,0 +1,87 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gnonlin</module>
+  <module-fancy>GNonLin Non-Linear Editing Plug-ins</module-fancy>
+  <name>Who stole my beard ?</name>
+  <version>0.10.6</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of GNonLin.
+</p>
+
+<p>
+This module contains a set of plug-ins for GStreamer to ease the
+creation of multimedia editors, or any other application where a
+timeline-oriented use of GStreamer makes sense.
+</p>
+<p>
+These elements include:
+<dl>
+<dt>gnlsource</dt>
+<dd>An element for using source elements/bins in a GnlComposition</dd>
+<dt>gnlfilesource</dt>
+<dd>A higher-level element for using a uri in a GnlComposition</dd>
+<dt>gnlcomposition</dt>
+<dd>A container element that handles GNonLin objects</dd>
+<dt>gnloperation</dt>
+<dd>An element for using filters in a GnlComposition</dd>
+</dl>
+</p>
+  </intro>
+  <features>
+    <feature>New GnlOperation element for using filters/effects in GnlComposition</feature>
+    <feature>Modification of GnlComposition internal structure for faster behaviour</feature>
+    <feature>Lots of fixes for complex compositions</feature>
+    <feature>Fixes for default sources</feature>
+    <feature>Many more unit tests</feature>
+    <feature>Code and documentation cleanups, more memory leaks fixes</feature>
+  </features>
+
+  <applications>
+GNonLin is primarily used by PiTiVi (http://www.pitivi.org/) and Jokosher (http://www.jokosher.org/)
+  </applications>
+    <contributors>
+	<person>Edward Hervey</person>
+	<person>Wim Taymans</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  
+
+  <bugs>
+    <bug>
+      <id>356380</id>
+      <summary>Composition doesn't find the next stop correctly with ope...</summary>
+    </bug>
+    <bug>
+      <id>351899</id>
+      <summary>Empty GnlComposition in paused will not take into account...</summary>
+    </bug>
+    <bug>
+      <id>352382</id>
+      <summary>Mention whether high/low number are high/low priority in ...</summary>
+    </bug>
+    <bug>
+      <id>352389</id>
+      <summary>Cannot link gnlfilesource and gnloperation</summary>
+    </bug>
+    <bug>
+      <id>362399</id>
+      <summary>Default sources broken</summary>
+    </bug>
+  </bugs>
+
+</release>
