@@ -1,3 +1,10 @@
+2006-11-27  Edward Hervey  <edward@fluendo.com>
+
+	* src/htdocs/entities.gst:
+	* src/htdocs/releases/gnonlin/0.10.6.xml:
+	* src/htdocs/releases/gnonlin/Makefile.am:
+	GNonLin 0.10.6 "Where is my beard ?" release
+
 2006-11-01  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* HACKING:
